# blocks

./: .clang-format  CMakeLists.txt  justfile
src/: block.c  block.h  camera.c  camera.h  chunk.c  chunk.h  config.h  database.c  database.h  helpers.c  helpers.h  main.c  noise.c  noise.h  pipeline.c  pipeline.h  raycast.c  raycast.h  voxel.c  voxel.h  world.c  world.h
